--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,12 +30,12 @@
 </p>
       </div>
 
-      <nav class="side-nav" aria-label="Primary">
-        <a href="#about">About</a>
-        <a href="#cbw">CBW</a>
-        <a href="#exgel">exgel</a>
-        <a href="#contact">Contact</a>
-      </nav>
+  <nav class="side-nav" aria-label="Primary">
+  <a href="#about">소개</a>
+  <a href="#function">신체기능</a>
+  <a href="#safework">안전한 작업</a>
+  <a href="#contact">문의</a>
+</nav>
     </div>
   </aside>
 
