--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -51,6 +51,7 @@
           a.classList.toggle("is-active", a.getAttribute("href") === hash);
         });
 
+        // 페이지 상단으로 부드럽게 이동
         window.scrollTo({ top: 0, behavior: "smooth" });
       }
       window.addEventListener("hashchange", showPanel);
