--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
-  <link rel="stylesheet" href="{{ "css/main.css" | relURL }}">
+  
+  {{ $style := resources.Get "css/main.css" | minify | fingerprint }}
+  <link rel="stylesheet" href="{{ $style.RelPermalink }}">
+  
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
 <body>
@@ -51,7 +54,6 @@
           a.classList.toggle("is-active", a.getAttribute("href") === hash);
         });
 
-        // 페이지 상단으로 부드럽게 이동
         window.scrollTo({ top: 0, behavior: "smooth" });
       }
       window.addEventListener("hashchange", showPanel);
