--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,9 +13,9 @@
 <body>
   <div class="shell">
     <header class="sidebar">
-      <div class="site-logo">
+      <div class="site-name">
         <a href="#about">
-          <img src="/images/nextworklab_lockup_tight.png" alt="NextWork Lab.">
+          <span class="next">Next</span><span class="work">Work</span><span class="lab">Lab.</span>
         </a>
       </div>
       <p class="site-tagline">신체 부담은 줄이고, 더 안전하게 일할 수 있도록</p>
@@ -36,7 +36,7 @@
 
     <footer class="footer">
       <div class="footer-inner">
-        <p class="copyright">&copy; {{ now.Format "2006" }} NextWork Lab. All rights reserved.</p>
+        <p class="copyright">&copy; 2025 NextWork Lab. All rights reserved.</p>
       </div>
     </footer>
   </div>
