--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -36,7 +36,7 @@
 
     <footer class="footer">
       <div class="footer-inner">
-        <p class="copyright">&copy; 2025 NextWork Lab. All rights reserved.</p>
+        <p class="copyright">&copy; {{ now.Format "2006" }} NextWork Lab. All rights reserved.</p>
       </div>
     </footer>
   </div>
